<resources>
    <string name="app_name">Roadio</string>
    <string name="map_view_showing_your_location_and_routes">Map view showing your location and routes</string>
    <string name="latitude">Latitude: --</string>
    <string name="braking">Braking: --</string>
    <string name="distance_alert">Distance Alert: --</string>
    <string name="longitude">Longitude: --</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="speed_km_h">Speed: -- km/h</string>
    <string name="todo4">TODO</string>
    <string name="danger">DANGER!</string>
    <string name="danger_vehicle_ahead_braking">⚠️ DANGER! VEHICLE AHEAD BRAKING ⚠️</string>
    <string name="vehicle_ahead_braking">VEHICLE AHEAD BRAKING</string>
    <string name="wueh">⚠️</string>
    <string name="actual_distance_m">Actual Distance: -- m</string>
    <string name="vehicle_ahead_braking1">VEHICLE AHEAD BRAKING!</string>
    <string name="y">!</string>
    <string name="required_safe_distance_m">Required Safe Distance: -- m</string>
    <string name="speed_km_h1">Speed: -- km/h</string>
    <string name="latitude1">Latitude: --</string>
    <string name="longitude1">Longitude: --</string>
    <string name="braking1">Braking: --</string>
    <string name="distance_alert1">Distance Alert: --</string>
    <string name="speed_format">Speed: %.2f km/h</string>
    <string name="latitude_format">Latitude: %.6f</string>
    <string name="longitude_format">Longitude: %.6f</string>
    <string name="braking_status">Braking: %1$s</string>
    <string name="not_yet_registered_sign_up">Not yet registered? Sign up</string>
    <string name="login">LOGIN</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_contact">Phone Contact</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_username">Create Username</string>
    <string name="todo7">TODO</string>


</resources>