<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ancient"
    android:padding="20dp"
    tools:context=".SignupActivity">


    <EditText
        android:id="@+id/signupFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="First Name"
        android:background="@drawable/rounded_input"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/signupLastName"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/signupLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autofillHints="Last Name"
            android:background="@drawable/rounded_input"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintStart_toEndOf="@id/signupFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/signupFirstName"
            app:layout_constraintHorizontal_weight="1" />

        <!-- Username -->
        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="Create Username"
            android:background="@drawable/rounded_input"
            android:hint="@string/create_username"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/signupFirstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signupPhone"
            app:layout_constraintHorizontal_weight="1" />

        <!-- Phone Contact -->

    <!-- Email -->

    <EditText
        android:id="@+id/signupPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:autofillHints="Enter Phone Number"
        android:background="@drawable/rounded_input"
        android:hint="@string/phone_contact"
        android:inputType="phone"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/signupUsername"
        app:layout_constraintTop_toTopOf="@id/signupUsername" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="352dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Enter Email"
        android:background="@drawable/rounded_input"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupUsername" />

        <!-- Password -->
    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="347dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:autofillHints="Create Password"
        android:background="@drawable/rounded_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupEmail" />

        <!-- Sign Up Button -->
    <Button
        android:id="@+id/signupButton"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/antique_gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupPassword" />

        <!-- Login Text -->
    <TextView
        android:id="@+id/loginText"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="Already have an account? Log In"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="68dp"
        android:layout_marginTop="144dp"
        android:text="Sign Up"
        android:textColor="@color/antique_gold"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
